# luacurses

./: CMakeLists.txt  Makefile  README.md
src/: curses.lua  luacurses.c  test.lua
